# radiox-backend

./: .env.example  .gitignore  Dockerfile.base  MICROSERVICES.md  Makefile  README.md  SPEAKER_MIGRATION_CHECKLIST.md  check_show_config.py  clear_logs.py  cli_data_collection.py  create_oev_show.py  docker-compose.production.yml  docker-compose.yml  env.example  env.simple.template  env.zero-secrets.template  frontend-integration-guide.md  generate_17uhr_show.py  list_elevenlabs_models.py  main.py  news-20250629_1040-show.txt  pyproject.toml  radiox-frontend-hybrid-integration.md  refactor_hardcoded_speakers.py  requirements.common.txt  requirements.txt  start_server.py  sync_web_dynamic.py  sync_web_shows.py  tunnel-config.yml  vercel.json  zurich-0630-show.md  zurich-17uhr-20250630_1657-show.txt  zurich-20250629_1032-show.txt  zurich-20250629_1047-show.txt  zurich-20250629_1147-show.txt  zurich-20250630_2220-show.txt  zurich-20250630_2254-show.txt  zurich-20250630_2301-show.txt  zurich-20250630_2324-show.txt
cli/: cli_data_collection.py  cli_performance.py  cli_show_service.py
config/: api_config.py  error_handling.py  graceful_shutdown.py  http_client_factory.py  key_client.py  retry_decorator.py  service_config.py  settings.py  simple_settings.py
database/: client_factory.py  modular_config.py  schema_manager.py  supabase_client.py
docs/: README.md
outplay/: data_collection.html  radiox_250609_1844.html  radiox_show_20250608_111121.html  radiox_show_20250608_111223.html  rss.html
scripts/: deploy-to-proxmox.sh  deploy-ultimate-radiox.sh  monitor-radiox.sh  run-service-standalone.sh  setup-cloudflare-tunnel.sh  test-all-services.sh  test-services-standalone.sh  validate-ports.sh
src/: __init__.py
web/: README.md  index.html  (+164 more)
(+112 files in other folders)
