[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiox-backend"
version = "3.3.0"
description = "Professional AI Radio Station Generator"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RadioX Team", email = "contact@radiox.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0", 
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "pydub>=0.25.0",
    "mutagen>=1.47.0",
    "eyed3>=0.9.7",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.0.0",
    "Pillow>=10.0.0",
    "loguru>=0.7.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "psutil>=5.9.0"
]

[project.urls]
Homepage = "https://github.com/muraschal/radiox-backend"
Repository = "https://github.com/muraschal/radiox-backend"
Documentation = "https://github.com/muraschal/radiox-backend/docs"

[tool.setuptools]
packages = ["src"]

[tool.pylance]
include = ["src", "*.py"]
exclude = ["venv", ".venv", "node_modules", "__pycache__"]

[tool.pyright]
include = ["src", "*.py"]
exclude = ["venv", ".venv", "node_modules", "__pycache__"]
venvPath = "."
venv = "venv"
pythonVersion = "3.9"
pythonPlatform = "Darwin"
typeCheckingMode = "basic" 